# Search_Engine

./: CMakeLists.txt  README.md  search_engine  unit_tests
Conf/: answers.json  config.json  requests.json
Test/: CMakeLists.txt  test.cpp  test.h  test_Search.h
documents/: doc1.txt  doc2.txt  doc3.txt  doc5.txt  doc6.txt
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  header.h  threadpool.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
